# peridynamic-lps-absorbing-boundary

./: .gitignore  CMakeLists.txt  LICENSE  README.md
libraries/libkdtree++/kdtree++/: function.hpp  kdtree.hpp  node.hpp  region.hpp
preprocessor/: main.cpp  preprocess
src/: main.cpp
src/helpers/: kd_tree_interface.h  space.h  utils.h
tests/: generate_test_data.cpp
